<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <LinearLayout
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="74dp"
                android:layout_height="74dp"
                app:srcCompat="@drawable/icon"/>

            <TextView
                android:text="@string/inventory_tracking"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/app_new_name"
                android:layout_marginTop="15dp"
                android:textSize="36sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/username"
                android:layout_marginTop="28dp"
                android:hint="@string/username"
                android:inputType="text"
                android:background="@drawable/bg_edittext_normal"
                android:layout_width="match_parent"
                android:layout_height="54dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_marginTop="26dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/bg_edittext_normal"
                android:layout_width="match_parent"
                android:layout_height="54dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="42dp"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/background_round_corner_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>
</layout>