<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".contact.DetailContactActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"/>

        <LinearLayout
            android:layout_margin="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/contactName"
                android:hint="@string/contact_name"
                android:inputType="text"
                android:background="@drawable/bg_edittext_normal"
                android:layout_width="match_parent"
                android:layout_height="54dp"/>

            <EditText
                android:id="@+id/phone"
                android:hint="@string/phone_number"
                android:layout_marginTop="16dp"
                android:inputType="phone"
                android:background="@drawable/bg_edittext_normal"
                android:layout_width="match_parent"
                android:layout_height="54dp"/>

            <EditText
                android:id="@+id/address"
                android:hint="@string/address"
                android:layout_marginTop="16dp"
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:background="@drawable/bg_edittext_normal"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>