<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <RelativeLayout
            android:id="@+id/header"
            android:padding="24dp"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <ImageView
                android:id="@+id/iconShutdown"
                android:layout_marginTop="12dp"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/icon_shutdown"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:layout_marginTop="12dp"
                android:id="@+id/tvTime"
                android:textColor="@color/white"
                tools:text="Sabtu, 13 Feb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@id/tvTime"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/entryItem"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:text="@string/entry_item"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:textColor="@color/grey"
                                android:text="@string/entry_item_today"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_alignParentEnd="true"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:srcCompat="@drawable/icon_item_masuk"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/itemOut"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:text="@string/item_out"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:textColor="@color/grey"
                                android:text="@string/item_out_today"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_alignParentEnd="true"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:srcCompat="@drawable/icon_item_keluar"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/warehouse"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:text="@string/warehouse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:textColor="@color/grey"
                                android:text="@string/all_items"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_alignParentEnd="true"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:srcCompat="@drawable/icon_gudang"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/report"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:text="@string/report"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:textColor="@color/grey"
                                android:text="@string/view_report"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_alignParentEnd="true"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:srcCompat="@drawable/icon_laporan"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/contact"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:paddingTop="26dp"
                        android:paddingBottom="26dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:text="@string/contact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:textColor="@color/grey"
                                android:text="@string/list_contact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_alignParentEnd="true"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:srcCompat="@drawable/icon_kontak"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>