<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.itemKeluar.ItemKeluarActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:hint="@string/item_name"
                    android:textSize="12sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/colorCCCCCC"
                    android:drawablePadding="8dp"
                    android:imeOptions="actionGo|actionDone"
                    android:inputType="text"
                    android:padding="8dp"
                    android:singleLine="true"/>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/barcode"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_edittext_normal"
                        android:hint="@string/barcode"
                        android:textSize="12sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColorHint="@color/colorCCCCCC"
                        android:drawablePadding="8dp"
                        android:imeOptions="actionGo|actionDone"
                        android:inputType="text"
                        android:padding="8dp"
                        android:singleLine="true"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/addBarcode"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:visibility="visible"
                                tools:visibility="visible"
                                app:srcCompat="@drawable/add_image"
                                android:layout_width="32dp"
                                android:layout_height="32dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <EditText
                    android:id="@+id/itemCount"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:hint="@string/item_count"
                    android:textSize="12sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/colorCCCCCC"
                    android:drawablePadding="8dp"
                    android:imeOptions="actionGo|actionDone"
                    android:inputType="number"
                    android:padding="8dp"
                    android:singleLine="true"/>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/customer"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_edittext_normal"
                        android:hint="@string/customer_name"
                        android:textSize="12sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColorHint="@color/colorCCCCCC"
                        android:drawablePadding="8dp"
                        android:imeOptions="actionGo|actionDone"
                        android:inputType="text"
                        android:padding="8dp"
                        android:singleLine="true"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/addCustomer"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:visibility="visible"
                                tools:visibility="visible"
                                app:srcCompat="@drawable/add_image"
                                android:layout_width="32dp"
                                android:layout_height="32dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:hint="@string/description"
                    android:textSize="12sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="top"
                    android:textColorHint="@color/colorCCCCCC"
                    android:drawablePadding="8dp"
                    android:imeOptions="actionGo|actionDone"
                    android:inputType="text|textMultiLine"
                    android:padding="8dp"
                    android:singleLine="true"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addImage"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:padding="7dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:visibility="visible"
                            tools:visibility="visible"
                            app:srcCompat="@drawable/add_image"
                            android:layout_width="32dp"
                            android:layout_height="32dp"/>

                        <TextView
                            android:text="@string/add_image"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_marginTop="16dp"
                    android:id="@+id/image"
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:srcCompat="@drawable/icon_item_masuk"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/deleteImage"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:padding="7dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:visibility="visible"
                            tools:visibility="visible"
                            app:srcCompat="@drawable/ic_trash_image"
                            android:layout_width="32dp"
                            android:layout_height="32dp"/>

                        <TextView
                            android:textColor="@color/red"
                            android:text="@string/delete_image"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>